[gd_scene load_steps=8 format=3 uid="uid://i2mfct4onoo3"]

[ext_resource type="Texture2D" uid="uid://c7j3tajgn5p7" path="res://assets/bg/zoompattern.png" id="1_exxvv"]
[ext_resource type="PackedScene" uid="uid://b7wplqfop7hd7" path="res://characters/lizard/lizard_qte.tscn" id="1_h7kg2"]
[ext_resource type="Shader" uid="uid://dp1hrnsthnvrh" path="res://scenes/QuickTime/level_end_qte.gdshader" id="1_k4lbd"]
[ext_resource type="Script" uid="uid://dfal2qcy1pflv" path="res://scenes/QuickTime/level_end_qte.gd" id="1_loenh"]
[ext_resource type="PackedScene" uid="uid://qn5cteq8u8oc" path="res://characters/lizard/button.tscn" id="2_g5dcm"]
[ext_resource type="AudioStream" uid="uid://beofi3554uk54" path="res://assets/audio/Lizard.wav" id="6_loenh"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_weem4"]
shader = ExtResource("1_k4lbd")
shader_parameter/SPEED = 1.0

[node name="Level End QTE" type="Node2D"]
visible = false
script = ExtResource("1_loenh")

[node name="DarkenedBg" type="ColorRect" parent="."]
offset_right = 320.0
offset_bottom = 179.0
color = Color(0.0156863, 0.0156863, 0.0156863, 0.4)

[node name="ForegroundBg" type="ColorRect" parent="."]
offset_left = 121.0
offset_right = 193.0
offset_bottom = 124.0
scale = Vector2(1.08, 2)
color = Color(0.210101, 0.492857, 0.929054, 1)

[node name="HyperLines" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_weem4")
offset_left = 108.0
offset_top = -27.0
offset_right = 428.0
offset_bottom = 153.0
scale = Vector2(0.329541, 2.88279)
texture = ExtResource("1_exxvv")

[node name="RedButton" parent="." instance=ExtResource("2_g5dcm")]
position = Vector2(160, 100)

[node name="LizardQTE" parent="." instance=ExtResource("1_h7kg2")]
position = Vector2(160, 86)

[node name="Instructions" type="RichTextLabel" parent="."]
offset_left = 127.0
offset_top = 129.0
offset_right = 209.0
offset_bottom = 141.0
scale = Vector2(0.835848, 1.0396)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "[shake rate=10.0 level=1
 connected=1]Press Spacebar![/shake]"

[node name="lizardSound" type="AudioStreamPlayer" parent="."]

stream = ExtResource("6_loenh")
max_polyphony = 10
bus = &"SFX"
playback_type = 1


[node name="QTE_Timer" type="Timer" parent="."]
wait_time = 7.0
one_shot = true

[connection signal="timeout" from="QTE_Timer" to="." method="_on_qte_timer_timeout"]
